--- a/django_project/first_horizon_proj/about_app/static/css/style.css
+++ b/django_project/first_horizon_proj/about_app/static/css/style.css
@@ -8,7 +8,8 @@ body {
     font-family: 'Saira', sans-serif;
     width: 100%;
     min-height: 100vh;
-    background-image: url("../img/Background_gradient.png");
+    background-image: url("../images/Background_gradient.png");
+    background-size: 100%;
     display: grid;
     grid-template-areas: 
     "header"
@@ -241,16 +242,16 @@ footer {
 
 .articles {
     display: grid;
-    grid-template-areas: "article_block";
 }
 
 .article {
-    grid-area: article_block;
     display: grid;
     grid-template-areas: 
     "title_article"
     "content_article"
     "date_article";
+    padding: 20px;
+    padding-left: 50px;
 }
 
 .title {
