--- a/django_project/first_horizon_proj/about_app/templates/about_app/articles.html
+++ b/django_project/first_horizon_proj/about_app/templates/about_app/articles.html
@@ -44,7 +44,7 @@
             <a href="https://t.me/insearchofmyself666" class="link_contact"><img src="{% static 'images/telegram_logo.png' %}" alt="" class="img_contact"></a>
             <a href="https://vk.com/luc143r" class="link_contact"><img src="{% static 'images/vk_logo.png' %}" alt="" class="img_contact"></a>
             <a href="https://discord.gg/XVtXuj6bxW" class="link_contact"><img src="{% static 'images/discord_logo.png' %}" alt="" class="img_contact"></a>
-            <a href="https://github.com/StupidDeveloper13" class="link_contact"><img src="{% static 'images/github_logo.png' %}" alt="" class="img_contact"></a>
+            <a href="https://github.com/Luc143r" class="link_contact"><img src="{% static 'images/github_logo.png' %}" alt="" class="img_contact"></a>
         </div>
         <hr id="right_line">
     </footer>
